--- a/requirements.txt
+++ b/requirements.txt
@@ -74,7 +74,7 @@ pdfkit==1.0.0
 pexpect==4.9.0
 pillow==10.4.0
 platformdirs==4.2.0
-plotly==5.23.0
+plotly>=5.23.0
 prompt_toolkit==3.0.47
 prophet==1.1.5
 protobuf==5.27.3
@@ -96,7 +96,6 @@ requests==2.32.3
 retrying==1.3.4
 rich==13.7.1
 rpds-py==0.19.1
-scikit-learn==1.5.1
 scipy==1.14.1
 seaborn==0.13.2
 setuptools==73.0.1
@@ -107,7 +106,7 @@ stack-data==0.6.3
 stanio==0.5.1
 statsmodels==0.14.2
 streamlit==1.37.1
-tenacity==9.0.0
+tenacity>=8.1.0,<9
 threadpoolctl==3.5.0
 toml==0.10.2
 tornado==6.4.1
@@ -120,6 +119,5 @@ virtualenv==20.25.1
 wcwidth==0.2.13
 Werkzeug==3.0.3
 wheel==0.44.0
-xgboost==2.1.1
 yarl==1.9.4
 zipp==3.20.0
